getting contact by device

--- a/src/classes/P1_Listener.cls
+++ b/src/classes/P1_Listener.cls
@@ -4,25 +4,36 @@ global class P1_Listener {
 	@HttpGet
 	global static P1Response doGet() {
 		RestRequest req = RestContext.request;
-		P1Response result = new P1Response(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), getRandomContact());
-		return result;
+		return respond(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), req.requestBody.toString());
 	}
 
 	@HttpPost
 	global static P1Response doPost() {
 		RestRequest req = RestContext.request;
-		P1Response result = new P1Response(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), getRandomContact());
+		return respond(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), req.requestBody.toString());
+	}
 
+	global static P1Response respond(String queue, String reqBody) {
+		System.debug('PAUL:' + reqBody);
+		JSONParser parser = JSON.createParser(reqBody);
+		Map<String,String> params = new Map<String,String>();
+		while (parser.nextToken() != null) {
+		if (parser.getCurrentToken() == JSONToken.FIELD_NAME) {
+				String key = parser.getText();
+				parser.nextValue();
+				params.put(key,parser.getText());
+			}
+		}
+		P1Response result = new P1Response(queue+' = '+reqBody, getRandomContact(params.get('device')));
 		return result;
 	}
 
-	global static Contact getRandomContact() {
-		Contact c = [SELECT Name, Title, Description FROM Contact LIMIT 1];
+	global static Contact getRandomContact(String device) {
+		Contact c = [SELECT Name, Title, Image__c, Description, Alignment__c FROM Contact WHERE Device__c = :device LIMIT 1];
 		return c;
 	}
 
 	global with sharing class P1Response {
-		public String thx = 'Thanks for sending me a request';
 		public String input = 'Your input was: ';
 		public Contact randomContact {get; set;}
 
