--- a/src/classes/P1_Listener.cls
+++ b/src/classes/P1_Listener.cls
@@ -1,20 +1,12 @@
 @RestResource(urlMapping='/P1/*')
 global class P1_Listener {
 
-	@HttpGet
-	global static P1Response doGet() {
-		RestRequest req = RestContext.request;
-		return respond(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), req.requestBody.toString());
-	}
-
 	@HttpPost
 	global static P1Response doPost() {
 		RestRequest req = RestContext.request;
-		return respond(req.requestURI.substring(req.requestURI.lastIndexOf('/')+1), req.requestBody.toString());
-	}
+		String queue   = req.requestURI.substring(req.requestURI.lastIndexOf('/')+1);
+		String reqBody = req.requestBody.toString();
 
-	global static P1Response respond(String queue, String reqBody) {
-		System.debug('PAUL:' + reqBody);
 		JSONParser parser = JSON.createParser(reqBody);
 		Map<String,String> params = new Map<String,String>();
 		while (parser.nextToken() != null) {
@@ -24,13 +16,11 @@ global class P1_Listener {
 				params.put(key,parser.getText());
 			}
 		}
-		P1Response result = new P1Response(queue+' = '+reqBody, getRandomContact(params.get('device')));
-		return result;
-	}
 
-	global static Contact getRandomContact(String device) {
+		String device = params.get('device');
 		Contact c = [SELECT Name, Title, Image__c, Description, Alignment__c FROM Contact WHERE Device__c = :device LIMIT 1];
-		return c;
+		P1Response result = new P1Response(queue+' = '+reqBody, c);
+		return result;
 	}
 
 	global with sharing class P1Response {
