--- a/src/classes/P4_Microservice.cls
+++ b/src/classes/P4_Microservice.cls
@@ -23,30 +23,39 @@ public with sharing class P4_Microservice {
 		person = requestContact();
 	}
 
+	public P4_Microservice() {
+		alignment = 'Good';
+	}
+
 	/**
 	 * Private method whereby the class posts a message to the queue and then gathers the related
 	 * response synchronously from the same queue. The response is used to query a Contact record.
 	 **/
-	private Contact requestContact() {
+	public Contact requestContact() {
 		Message_Queue__c message = new Message_Queue__c(Queue_Name__c = 'pattern4');
-		Datetime dt = Datetime.now();
-		String responseId = String.valueOf(dt.getTime());
-		message.Message__c = '{ "responseId" : "'+responseId+'", "alignment" : "'+alignment+'"}';
-		insert message;
+		message.Message__c = '{ "alignment" : "'+alignment+'" }';
+		Database.SaveResult sr = Database.insert(message, false);
 
 		Message_Queue__c reply = [
-			SELECT Name, Message__c 
+			SELECT Reply__c 
 			FROM Message_Queue__c
-			WHERE Queue_Name__c = :responseId
-			LIMIT 1];
-
-		reply.Read_Time__c = Datetime.now();
-		update reply;
+			WHERE Id = :sr.Id];
+		String cId;
+		JSONParser parser = JSON.createParser(reply.Reply__c);
+		while (parser.nextToken() != null) {
+			if (parser.getCurrentToken() == JSONToken.FIELD_NAME) {
+				String key = parser.getText();
+				if (key.equals('Id')) {
+					parser.nextValue();
+					cId = parser.getText();
+				} 
+			}
+		}
 
 		Contact c = [
 			SELECT Name, Title, Image__c, Description, Alignment__c 
 			FROM Contact 
-			WHERE Id = :reply.Message__c];
+			WHERE Id = :cId];
 		return c;
 	}
 
@@ -54,4 +63,16 @@ public with sharing class P4_Microservice {
 		List<Message_Queue__c> messages = [SELECT Id FROM Message_Queue__c];
 		delete messages;
 	}
+
+	public PageReference getContact() {
+		person = requestContact();
+		return null;
+	}
+	public List<SelectOption> getItems() {
+		List<SelectOption> options = new List<SelectOption>();
+		options.add(new SelectOption('Good','Good'));
+		options.add(new SelectOption('Evil','Evil'));
+		options.add(new SelectOption('Indefinite','Indefinite'));
+        return options;
+    }
 }
